--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "framer-motion": "^4.1.17",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-canvas": "^1.3.0",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^8.32.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
+    "styled-normalize": "^8.0.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
